--- a/src/views/signup.handlebars
+++ b/src/views/signup.handlebars
@@ -45,8 +45,8 @@
                             </div>
 
                             <div class="form-group">
-                                <button type="submit"
-                                    class="form-control btn btn-primary submit px-3">Registrarse</button>
+                                <button type="submit" class="form-control btn btn-primary submit px-3"
+                                    id="btn-signup">Registrarse</button>
                             </div>
                         </form>
                     </div>
