--- a/src/views/forgot.handlebars
+++ b/src/views/forgot.handlebars
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-                <h2 class="heading-section">Login</h2>
+                <h2 class="heading-section">Cambiar contraseña</h2>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -11,43 +11,35 @@
                     <div class="text-wrap p-4 p-lg-5 text-center d-flex align-items-center order-md-last">
                         <div class="text w-100">
                             <h2>Bienvenido!</h2>
-                            <p>No tienes una cuenta?</p>
-                            <a href="/signup" class="btn btn-white btn-outline-white">Registrarse</a>
+                            <p>Ya tienes cuenta?</p>
+                            <a href="/" class="btn btn-white btn-outline-white">Iniciar Sesión</a>
                         </div>
                     </div>
                     <div class="login-wrap p-4 p-lg-5">
                         <div class="d-flex">
                             <div class="w-100">
-                                <h3 class="mb-4">Iniciar Sesión</h3>
+                                <h3 class="mb-4">Cambiar Contraseña</h3>
                             </div>
-                            <div class="w-100">
-                                <p class="social-media d-flex justify-content-end">
-                                    <a href="/api/sessions/github"
-                                        class="social-icon d-flex align-items-center justify-content-center"><span
-                                            class="fa fa-github"></span></a>
-                                </p>
-                            </div>
+
                         </div>
-                        <form action="#" class="signin-form" id="login-form">
+                        <form class="signin-form">
                             <div class="form-group mb-3">
                                 <label class="label" for="email">Email</label>
                                 <input type="email" class="form-control" id="email" placeholder="Email" required>
                             </div>
                             <div class="form-group mb-3">
-                                <label class="label" for="password">Contraseña</label>
-                                <input type="password" class="form-control" id="password" placeholder="Contraseña"
+                                <label class="label" for="newPassword">Nueva Contraseña</label>
+                                <input type="password" class="form-control" id="newPassword"
+                                    placeholder="Contraseña Nueva" required>
+                            </div>
+                            <div class="form-group mb-3">
+                                <label class="label" for="newPasswordTwo">Nueva Contraseña</label>
+                                <input type="password" class="form-control" id="newPasswordTwo" placeholder="Repetir"
                                     required>
                             </div>
 
                             <div class="form-group">
-                                <button type="submit" class="form-control btn btn-primary submit px-3"
-                                    id="btn-login">Iniciar
-                                    Sesión</button>
-                            </div>
-                            <div class="form-group d-md-flex justify-content-center">
-                                <div class="w-70 text-md-center">
-                                    <a href="/forgot">Olvidaste la contraseña?</a>
-                                </div>
+                                <button class="form-control btn btn-primary submit px-3" id="btn-forgot">OK</button>
                             </div>
                         </form>
                     </div>
