--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -4,16 +4,45 @@
             <div class="container-cart">
                 <h2>PERFIL</h2>
             </div>
-            <ul class="ul-profile" id="ul-profile">
+
+            {{#if data.payload.user.isAdmin}}
+            <ul class="ul-profile-2">
+                <li class="li-titles">Rol</li>
+                <li class="li-titles">Email</li>
+            </ul>
+            {{else}}
+            <ul class="ul-profile">
                 <li class="li-titles">Rol</li>
                 <li class="li-titles">Nombre</li>
                 <li class="li-titles">Apellido</li>
                 <li class="li-titles">Email</li>
                 <li class="li-titles">Edad</li>
             </ul>
+            {{/if}}
+
         </div>
+
         <div id="form-user">
+            {{#if data.payload.user.isAdmin}}
+            <ul class="ul-profile-2" id="ul-profile" data-welcome={{data.payload.user.role}}
+                data-counter={{data.payload.user.counter}}>
+                <li class="profile-role">"{{data.payload.user.role}}"</li>
+                <li><strong>{{data.payload.user.email}}</strong></li>
+                <button class="btn-logout" id="btn-logout">SALIR</button>
+            </ul>
+            {{else}}
+            <ul class="ul-profile" id="ul-profile" data-welcome={{data.payload.user.firstName}}
+                data-counter={{data.payload.user.counter}}>
+                <li class="profile-role">"{{data.payload.user.role}}"</li>
+                <li>{{data.payload.user.firstName}}</li>
+                <li>{{data.payload.user.lastName}}</li>
+                <li><strong>{{data.payload.user.email}}</strong></li>
+                <li>{{data.payload.user.age}}</li>
+                <button class="btn-logout" id="btn-logout">SALIR</button>
+            </ul>
+            {{/if}}
         </div>
+
     </div>
 
     <div class="tabla">
@@ -36,7 +65,7 @@
             </ul>
         </div>
         <div id="form-real-time">
-            {{#each data.payload}}
+            {{#each data.payload.product}}
             <ul class="producto" data-id={{this._id}}>
                 <li class="idTitle">{{this.code}}</li>
                 <li><strong>{{this.title}}</strong></li>
@@ -70,3 +99,20 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/products.js"></script>
+
+{{!
+
+
+<ul class="ul-profile-2">
+    <li class="profile-role">"Admin"</li>
+    <li><strong>adminCoder@coder.com</strong></li>
+    <button class="btn-logout" id="btn-logout">SALIR</button>
+</ul>
+
+<ul class="ul-profile-2" id="ul-profile">
+    <li class="li-titles">Rol</li>
+    <li class="li-titles">Email</li>
+</ul>
+
+
+}}
